# Lab-for-Go-and-Rast

./: .gitignore  PROMT_LOG.md  README.md
.github/: .yamllint.yml
.github/workflows/: CI.yml  lint.yml  release.yml
hard/cicd_rust_ci_cd/: .yamllint  Cargo.toml  README.md  pyproject.toml
hard/cicd_rust_ci_cd/.github/: dependabot.yml
hard/cicd_rust_ci_cd/.github/workflows/: CI.yml  lint.yml
hard/cicd_rust_ci_cd/python/: __init__.py
hard/cicd_rust_ci_cd/python/fastmath/: __init__.py
hard/cicd_rust_ci_cd/python/tests/: test_fastmath.py
hard/cicd_rust_ci_cd/src/: lib.rs
hard/go_microservice/: Dockerfile.go  Dockerfile.python  README.md  docker-compose.yml
hard/go_microservice/go-service/: functions.go  go.mod  http_test.go  integration.go  main.go  main_test.go  server.go  trapezoid.go
hard/go_microservice/go-service/proto/: integration.pb.go  integration.proto  integration_grpc.pb.go
hard/go_microservice/python-client/: client.py  integration_pb2.py  integration_pb2_grpc.py  requirements.txt  test_client.py
hard/go_microservice/python-client/proto/: integration.proto
mid/fourth_task/: README.md  client.py  go.mod  protocol.go  server.go  server_test.go  test_client.py
mid/maturin_task/: Cargo.toml  README.md  pyproject.toml
mid/maturin_task/python/fastmath/: __init__.py
mid/maturin_task/python/tests/: test_all.py  test_fastmath_unittest.py
mid/maturin_task/src/: lib.rs
mid/third_task/: README.md  go.mod  greet.go  greet_test.go  main.go  run_hello.py  test_run_hello.py
